--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                         </h2>
                     </div>
                     <div class="block buttons">
-                        <a href="https://facebook.com/"><button class="button is-white is-outlined">Visit my Facebook</button></a> &nbsp;
+                        <a href="https://facebook.com/"><button class="button is-white is-outlined">Visit my Facebooks</button></a> &nbsp;
                         <a href="https://twitter.com/"><button class="button is-white is-outlined">Visit my Twitter</button></a>
                     </div>
                 </div>
